# paas-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yaml  developers-guide.md  getting-started.ipynb  pyproject.toml
examples/paas/: paas_docs_urls.csv
examples/paas/docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
examples/paas/docs/docs/: intro.md
examples/paas/docs/docs/dsl/: acm.md  alb.md  ec2.md  ecs.md  networking.md  rds.md  route53.md
examples/paas/docs/docs/guidelines/: best-practices.md  how-tos.md  networking.md
examples/paas/examples/: README.md  microservices-example.yaml  simple-web-app.yaml
src/paas_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/paas_ai/api/: __init__.py  main.py
src/paas_ai/api/middleware/: __init__.py  cors.py  logging.py  security.py
src/paas_ai/api/models/: __init__.py  agent.py  base.py  rag.py
src/paas_ai/api/routers/: __init__.py  agent.py
src/paas_ai/cli/: main.py
src/paas_ai/cli/commands/: mcp.py
src/paas_ai/cli/commands/agent/: README.md  __init__.py  chat.py
src/paas_ai/cli/commands/config/: README.md  __init__.py  main.py
src/paas_ai/cli/commands/rag/: Readme.md  __init__.py  reports.py  resources.py  search.py  status.py  sync.py
src/paas_ai/cli/utils/: progress.py
src/paas_ai/core/agents/: __init__.py  base_agent.py  multi_agent_system.py  persistence.py  token_tracking.py  tool_registry.py
src/paas_ai/core/agents/prompts/designer/: system.md
src/paas_ai/core/agents/prompts/paas_manifest_generator/: system.md
src/paas_ai/core/agents/prompts/supervisor/: system.md
src/paas_ai/core/agents/tools/: __init__.py  file_tools.py  handoff_tools.py  human_assistance_tools.py  paas_generation_tools.py  rag_search.py
src/paas_ai/core/config/: __init__.py  loader.py  schemas.py
src/paas_ai/core/rag/: README.md  __init__.py  config.py  pipeline.py
src/paas_ai/core/rag/citations/: README.md  __init__.py  enricher.py  formatters.py  models.py  strategies.py
src/paas_ai/core/rag/content_validators/: __init__.py  base.py  content.py  factory.py
src/paas_ai/core/rag/embeddings/: __init__.py  base.py  factory.py  openai.py  registry.py  sentence_transformers.py
src/paas_ai/core/rag/loaders/: __init__.py  base.py  confluence.py  crawl4ai_web.py  crawl4ai_web_loader.py  csv.py  directory.py  factory.py  github.py  html.py  json.py  markdown.py  notion.py  pdf.py  registry.py  web.py
src/paas_ai/core/rag/processing/: __init__.py  base.py  pipeline.py
src/paas_ai/core/rag/processing/stages/: __init__.py  enrich.py  filter.py  load.py  split.py  validate.py
src/paas_ai/core/rag/retrievers/: __init__.py  base.py  ensemble.py  factory.py  mmr.py  multi_query.py  parent_document.py  registry.py  similarity.py  similarity_score_threshold.py
src/paas_ai/core/rag/splitters/: __init__.py  base.py  character.py  code.py  factory.py  html.py  json.py  markdown.py  recursive_character.py  registry.py  token.py
src/paas_ai/core/rag/vectorstore/: __init__.py  base.py  chroma.py  factory.py  faiss.py  pinecone.py
src/paas_ai/utils/: logging.py
tests/integration/test_rag/: __init__.py
tests/unit/test_cli/: __init__.py
tests/unit/test_cli/test_commands/: __init__.py
tests/unit/test_cli/test_commands/test_agent/: README.md  __init__.py  test_chat.py  test_init.py  test_integration.py
tests/unit/test_cli/test_commands/test_config/: __init__.py  test_init.py  test_integration.py  test_main.py  test_management.py  test_profiles.py  test_show.py  test_validation.py
tests/unit/test_cli/test_commands/test_rag/: __init__.py  test_init.py  test_integration.py  test_reports.py  test_resources.py  test_search.py  test_status.py  test_sync.py
tests/unit/test_core/test_config/: test_loader.py  test_schemas.py
tests/unit/test_core/test_rag/: __init__.py  test_config.py
tests/unit/test_core/test_rag/test_citations/: __init__.py  test_enricher.py  test_formatters.py  test_integration.py  test_models.py  test_registry.py  test_strategies.py
tests/unit/test_core/test_rag/test_embeddings/: __init__.py  test_base.py  test_factory.py  test_integration.py  test_openai.py  test_registry.py  test_sentence_transformers.py
tests/unit/test_core/test_rag/test_loaders/: __init__.py  test_crawl4ai_web_loader.py  test_factory.py
tests/unit/test_core/test_rag/test_processing/: __init__.py  test_base.py  test_integration.py  test_pipeline.py  test_stages.py
tests/unit/test_core/test_rag/test_retrievers/: __init__.py  test_base.py  test_ensemble.py  test_factory.py  test_integration.py  test_mmr.py  test_multi_query.py  test_parent_document.py  test_registry.py  test_similarity.py  test_similarity_score_threshold.py
tests/unit/test_core/test_rag/test_splitters/: __init__.py  conftest.py  test_base.py  test_character.py  test_code.py  test_factory.py  test_html.py  test_integration.py  test_json.py  test_markdown.py  test_recursive_character.py  test_registry.py  test_token.py
tests/unit/test_core/test_rag/test_vectorstore/: __init__.py  test_base.py  test_chroma.py  test_factory.py  test_faiss.py  test_integration.py  test_pinecone.py
tests/unit/test_utils/: test_logging.py
